# obelisk

./: ChangeLog.md  README.md  default.nix
dep/reflex-platform/: github.json
lib/backend/src/Obelisk/: Backend.hs
lib/cliapp/src/Obelisk/: CliApp.hs
lib/cliapp/src/Obelisk/CliApp/: Types.hs
lib/command/src/Obelisk/: App.hs  Command.hs
lib/command/src/Obelisk/Command/: Deploy.hs  Nix.hs  Project.hs  Run.hs  Thunk.hs  Utils.hs  VmBuilder.hs
lib/route/: obelisk-route.cabal
lib/route/src/Obelisk/: Route.hs
lib/route/src/Obelisk/Route/: Frontend.hs  TH.hs
skeleton/: default.nix  reproduce-error
skeleton/backend/: backend.cabal
skeleton/backend/src/: Backend.hs
skeleton/common/: common.cabal
skeleton/common/src/Common/: Encoders.hs
skeleton/dep/reflex/: github.json
skeleton/dep/reflex-dom/: github.json
skeleton/frontend/: frontend.cabal
skeleton/frontend/src/: Frontend.hs
