name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , binary
               , bytestring
               , hexstring
               , kleene
               , lattices
               , mtl
               , QuickCheck
               , semigroupoids
               , text
  exposed-modules:
    Common.Api
    Common.Encoders
    Common.Route
  ghc-options: -Wall -Werror -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
